# supervoxel

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
cpp/: CMakeLists.txt
cpp/include/: supervoxel.h
src/supervoxel/: numpy.i  supervoxel.i
