[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel", "cmake", "swig", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "supervoxel"
version = "0.1.0"
authors = [
    {name = "Zan Gojcic"},
    {name = "Nicholas Meyer", email = "meyernic@ethz.ch"},
]
maintainers = [
    {name = "Nicholas Meyer", email = "meyernic@ethz.ch"},
]
description = "Description of ModuleA"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.11"
keywords = ["ONE", "TWO"]
license = {file = "LICENSE"} # To be changed once released
classifiers = [ # https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#classifiers
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",

    "Private :: Do Not Upload" # REMOVE BEFORE FLIGHT -- PyPI will always reject packages with classifiers beginning with Private ::
]

dependencies = [

]

[tool.setuptools]
packages = ["supervoxel"]

[tool.setuptools.package-dir]
supervoxel = "src/supervoxel"

[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/me/spam.git"
Issues = "https://github.com/me/spam/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"