[build-system]
# scikit-build-core already bundles wheels for CMake & Ninja, so no need to list them.
requires = ["scikit-build-core>=0.11", "swig>=4.3", "numpy ~=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "supervoxel"
version = "0.1.2"
description     = "Fast point‑cloud tiling with PCL, exposed to Python via SWIG"
authors = [
    {name = "Zan Gojcic"},
    {name = "Nicholas Meyer", email = "meyernic@ethz.ch"},
]
maintainers = [
    {name = "Nicholas Meyer", email = "meyernic@ethz.ch"},
]

keywords = ["point‑cloud", "tiling", "PCL", "SWIG", "C++"]

license = { file = "LICENSE" }

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: C++",
  "Operating System :: OS Independent"
]

dependencies = [
    "numpy~=2.0"
]

[project.urls]
Homepage       = "https://github.com/me/pc-tiling"
Documentation  = "https://readthedocs.org/projects/pc-tiling"
Repository     = "https://github.com/me/pc-tiling"
Issues         = "https://github.com/me/pc-tiling/issues"
Changelog      = "https://github.com/me/pc-tiling/blob/main/CHANGELOG.md"


# ───────── scikit‑build‑core options ──────────────────────────────
[tool.scikit-build]
cmake.source-dir = "."        # <- dotted name, not hyphen